<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

        <!--     android:onClick="@{() -> user.saveLastLoginUser(user.userName,user.password)}" -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:background="@drawable/login_bg_login_btn"
            android:text="@string/login_btn_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.235" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/login_register_btn_color"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintVertical_bias="0.276" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_bg_login_layout"
            android:padding="4dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:hint="@string/login_password"
                android:inputType="text"
                android:maxLength="16"
                android:maxLines="1"
                android:text="@{user.password}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_pwd"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_pwd"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="32dp"
                android:background="@mipmap/login_ic_pwd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/login_bg_login_layout"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_over">

            <EditText
                android:id="@+id/et_uname"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/login_username"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="16"
                android:maxLines="1"
                android:text="@{user.userName}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_uname"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.636" />

            <ImageView
                android:id="@+id/img_uname"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="32dp"
                android:background="@mipmap/login_ic_uname"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/img_over"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/img_mecho_raw" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--启用 Databinding 后,页面可以主动绑定数据 -->
    <data>

        <variable
            name="user"
            type="com.crazyorange.beauty.viewmodel.UserViewModel" />
    </data>

</layout>